[package]
name = "seed_styling_proposal"
version = "0.1.0"
authors = ["Your Name <email@address.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "^0.2.50"
seed = {git = "https://github.com/seed-rs/seed.git"}
seed_hooks = { path = "../seed_hooks"}
seed_style = { path = "../seed_style"}
# For serialization, eg sending requests to a server. Otherwise, not required.

[dev-dependencies]
wasm-bindgen-test = "0.2.50" # NOTE: keep in sync with wasm-bindgen version

[profile.release]  # Attempts to minimize file size
lto = true
opt-level = 'z'
