[package]
name = "seed_styling_intro"
version = "0.1.0"
authors = ["Your Name <email@address.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
seed = "0.7.0"
seed_hooks = "0.1.3"
# seed_style = { path = "../seed_style", package = "seed_style_preview", version = "0.1.6" }
seed_style = {package = "seed_style_preview", version = "0.1.6" }
rand = "0.7.3"
illicit = "0.9.2"
web-sys = "0.3.39"
    
[dev-dependencies]
wasm-bindgen-test = "0.3.12" 

[profile.release]  # Attempts to minimize file size
lto = true
opt-level = 'z'
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']
